--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
 
 * {
-    /*! margin: 0; */
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 
 :root {
     --primary-font: 'DM Sans', sans-serif;
@@ -36,12 +37,13 @@ body {
 }
 
 #mainNav ul a {
-     line-height: 21px;
+    line-height: 21px;
     font-weight: 500;
 }
+
 .navbar-dark .navbar-nav .nav-link {
-    color: white;   
-   }
+    color: white;
+}
 
 #mainNav .button-signup {
     background: #e7332b;
@@ -71,19 +73,12 @@ body {
 .header {
     background-color: black;
     width: 100%;
-    height: 100vh;
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    background-image: url('../img/backgroundimg.png');
-    display: flex;
-    justify-content: left;
-    align-items: center;
+    background-image: linear-gradient(90deg, #000000 35.07%, rgba(0, 0, 0, 0) 81.14%), url('../img/backgroundimg.png');
+    height: 790px;
 }
-
-/*.header .container {
-    max-width: 1440px;
-}*/
 
 .header__text {
     color: white;
@@ -109,6 +104,15 @@ body {
 .header__button:hover {
     background: transparent;
     color: white;
+}
+
+.heroArea {
+    width: 100%;
+    height: 710px;
+
+
+    display: flex;
+    align-items: center;
 }
 
 /* ----section 2 ------*/
@@ -216,6 +220,9 @@ h2+p {
     border-radius: 20px;
     color: #ffffff;
     padding: 10px 24px;
+    height: 41px;
+
+    line-height: 21px;
 }
 
 #plans .btn:hover {
@@ -347,6 +354,12 @@ button:focus {
 
 /* accordion ends */
 /* FAQ media Query */
+@media screen and (max-width:575px) {
+   
+.accordionButton {
+    width: 100%;
+    }
+}
 
 @media screen and (max-width: 768px) {
     #faq {
@@ -358,6 +371,7 @@ button:focus {
 
 #contact {
     background-color: rgba(255, 255, 255, 0.05);
+    background-image: linear-gradient(90deg, #000000 0%, rgba(0, 0, 0, 0) 31.25%, rgba(0, 0, 0, 0) 68.75%, #000000 100%);
     margin: 0 auto;
     border: 1px solid transparent;
     border-image: linear-gradient(90deg, #000000 0%, rgba(255, 255, 255, 0.15) 31.25%, rgba(255, 255, 255, 0.15) 68.75%, #000000 100%);
@@ -384,6 +398,8 @@ button:focus {
     border-radius: 20px;
     color: #ffffff;
     padding: 10px 24px;
+    height: 41px;
+    line-height: 21px;
 }
 
 #contact .btn:hover {
@@ -426,7 +442,7 @@ button:focus {
     #contact {
         margin-top: 140px;
     }
-    
+
     #contact .sect__lead {
         font-size: 1.375rem;
         line-height: 28.6px;
