--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
     color: #ffffff;
     font-weight: 400;
     background: var(--dark-body);
+    height: 2914px;
 }
 
 /* ----section 1 ------*/
@@ -77,7 +78,8 @@ body {
     background-position: center center;
     background-size: cover;
     background-image: linear-gradient(90deg, #000000 35.07%, rgba(0, 0, 0, 0) 81.14%), url('../img/backgroundimg.png');
-    height: 790px;
+    height: 27%;
+    background-attachment: fixed;
 }
 
 .header__text {
@@ -108,9 +110,7 @@ body {
 
 .heroArea {
     width: 100%;
-    height: 710px;
-
-
+    height: 90%;
     display: flex;
     align-items: center;
 }
